# AvatarAdam-stagging

./: .gitignore  ARCHITECTURE_DOCUMENTATION_INDEX.md  ARCHITECTURE_FLOW.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_SUMMARY.md  BEFORE_AFTER_IMPROVEMENTS.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_TEST_REPORT.md  DOCUMENTATION_COMPLETE.md  FRONTEND_FIXES.md  FRONTEND_TEST_REPORT.md  INDEX.md  MVPRequirements.md  PDF_README.md  PROJECT_ANALYSIS_COMPLETE.md  PROJECT_TEST_RESULTS.md  QUICK_REFERENCE.md  QUICK_START.md  README_SETUP.md  READ_ME_FIRST_TESTS.md  SETUP_SUMMARY.md  START_HERE.md  TESTING_COMPLETE.md  TESTING_COMPLETE.txt  TESTING_INDEX.md  TEST_REPORT.md  TEST_RESULTS_README.md  TEST_SUMMARY.md  create_clean_pdf.py  docker-compose.db.yml  docker-compose.yml  generate_diagram_pdf.py  generate_monochrome_pdf.py  generate_simple_pdf.py  start_server.ps1
backend/: .dockerignore  .env.example  DEALERSHIP_RAG_GUIDE.md  Dockerfile  README.md  init_db.py  pyproject.toml  run_vad_tests.py  test_api.py  test_login_debug.py  test_results.txt  test_simple.py  test_vad_implementation.py  test_vad_manual.py  test_vad_standalone.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20251212_1416_323b1add0d9f_fix_users_schema.py  20251212_1423_fef62c2b46e1_fix_refresh_tokens_schema.py  20251212_1500_migrate_to_pinecone.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/scripts/: seed_db.py
backend/tests/: test_vad_endpoint.py  test_vad_service.py
(+63 files in other folders)
